# colorman

./: .gitignore  README.md  meson.build  package.json  tsconfig.json
.github/workflows/: release.yml
data/: meson.build  org.gnome.Colorman.desktop.in  org.gnome.Colorman.gschema.xml  org.gnome.Colorman.metainfo.xml.in  org.gnome.Colorman.service.in
packaging/aur/: PKGBUILD
scripts/: build-release.sh  build-resources.ts  curl-install.sh  curl-uninstall.sh  dev.ts  install-release.sh  launcher.mjs  uninstall-release.sh
src/: application.ts  main.ts  meson.build  org.gnome.Colorman.data.gresource.xml  org.gnome.Colorman.icons.gresource.xml  org.gnome.Colorman.in  org.gnome.Colorman.src.gresource.xml  version.ts
src/color/: convert.ts  tailwind-lookup.ts  types.ts
src/data/: tailwind-colors.ts
src/pages/color-inspector/: index.blp  index.ts
src/pages/color-pallete/: index.blp  index.ts
src/window/: window.blp  window.ts
